<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg">

    <ImageView
        android:id="@+id/iv_back"
        style="@style/App_ImageView_Back" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Main_Title_TextView"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/sw600_20dp"
        android:gravity="center"
        android:text="@string/net_add_url" />


    <LinearLayout
        android:layout_width="@dimen/sw600_450dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_url_name"
            style="@style/App_EditView_Base"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sw600_80dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_bk_wilhte_rang"
            android:hint="@string/net_url_name"
            android:paddingLeft="@dimen/sw600_45dp"
            android:paddingRight="@dimen/sw600_45dp"
            android:textColorHint="@color/sino_white_11" />

        <EditText
            android:id="@+id/et_url_path"
            style="@style/App_EditView_Base"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sw600_80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sw600_25dp"
            android:background="@drawable/btn_bk_wilhte_rang"
            android:hint="@string/net_url_path"
            android:paddingLeft="@dimen/sw600_45dp"
            android:paddingRight="@dimen/sw600_45dp"
            android:textColorHint="@color/sino_white_11" />

        <TextView
            android:id="@+id/btn_save"
            style="@style/App_Button_TextView"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sw600_25dp"
            android:background="@drawable/btn_bk_wilhte"
            android:text="@string/btn_save" />
    </LinearLayout>

</RelativeLayout>
