<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/sw600_25dp">

    <TableRow android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_box_statistics"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pre_main_menu"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/sw600_15dp">

            <ImageView
                style="@style/Main_Menu_Icon_ImageView"
                android:src="@mipmap/ic_main_statistics" />

            <TextView
                style="@style/Main_Menu_TextView"
                android:text="@string/main_statistics" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/sino_white_99" />

        <LinearLayout
            android:id="@+id/ll_box_plan_class"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pre_main_menu"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/sw600_15dp">

            <ImageView
                style="@style/Main_Menu_Icon_ImageView"
                android:src="@mipmap/ic_main_plan_class" />

            <TextView
                style="@style/Main_Menu_TextView"
                android:text="@string/main_class" />
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/sino_white_99" />

    <TableRow android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_box_store"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pre_main_menu"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/sw600_15dp">

            <ImageView
                style="@style/Main_Menu_Icon_ImageView"
                android:src="@mipmap/ic_main_store" />

            <TextView
                style="@style/Main_Menu_TextView"
                android:text="@string/main_store" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/sino_white_99" />

        <LinearLayout
            android:id="@+id/ll_box_consumptionplan"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pre_main_menu"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/sw600_15dp">

            <ImageView
                style="@style/Main_Menu_Icon_ImageView"
                android:src="@mipmap/ic_main_pay" />

            <TextView
                style="@style/Main_Menu_TextView"
                android:text="@string/consume_title" />
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/sino_white_99" />

    <TableRow android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_box_eyeshield"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pre_main_menu"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/sw600_15dp">

            <ImageView
                style="@style/Main_Menu_Icon_ImageView"
                android:src="@mipmap/ic_main_eye" />

            <TextView
                style="@style/Main_Menu_TextView"
                android:text="@string/eyeshield_title" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/sino_white_99" />

        <LinearLayout
            android:id="@+id/ll_box_sino_coin"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pre_main_menu"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/sw600_15dp">

            <ImageView
                style="@style/Main_Menu_Icon_ImageView"
                android:src="@mipmap/ic_main_sino_coin" />

            <TextView
                style="@style/Main_Menu_TextView"
                android:text="@string/sinocoin_title" />
        </LinearLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/sino_white_99" />

    <TableRow android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_box_about"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pre_main_menu"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/sw600_15dp">

            <ImageView
                style="@style/Main_Menu_Icon_ImageView"
                android:src="@mipmap/ic_main_about" />

            <TextView
                style="@style/Main_Menu_TextView"
                android:text="@string/abou_title" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/sino_white_99" />

        <LinearLayout
            android:id="@+id/ll_box_feedback"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_pre_main_menu"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/sw600_15dp">

            <ImageView
                style="@style/Main_Menu_Icon_ImageView"
                android:src="@mipmap/ic_main_feedback" />

            <TextView
                android:id="@+id/textView"
                style="@style/Main_Menu_TextView"
                android:text="@string/feedback_title" />
        </LinearLayout>
    </TableRow>
</TableLayout>
