<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg">

    <ImageView
        android:id="@+id/iv_back"
        style="@style/App_ImageView_Back" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Main_Title_TextView"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/sw600_20dp"
        android:gravity="center"
        android:text="@string/eyeshield_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="@dimen/sw600_50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    style="@style/Main_Menu_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eyeshield_use_time" />

                <ImageView
                    android:id="@+id/iv_edit1"
                    android:layout_width="@dimen/sw600_200dp"
                    android:layout_height="@dimen/sw600_200dp"
                    android:layout_marginTop="@dimen/sw600_25dp"
                    android:src="@mipmap/eyeshield_sum_time" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/iv_count_time"
                        style="@style/TextView_Base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sw600_25dp"
                        android:text="0" />

                    <TextView
                        style="@style/TextView_Base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sw600_25dp"
                        android:text="@string/unit_h" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/sw600_25dp"
                android:background="@color/sino_white_11"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/Main_Menu_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sw600_25dp"
                    android:text="@string/eyeshield_once_time" />

                <ImageView
                    android:id="@+id/iv_edit2"
                    android:layout_width="@dimen/sw600_200dp"
                    android:layout_height="@dimen/sw600_200dp"
                    android:layout_marginTop="@dimen/sw600_25dp"
                    android:src="@mipmap/eyeshield_sum_time" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/iv_once_time"
                        style="@style/TextView_Base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sw600_25dp"
                        android:text="0" />

                    <TextView
                        style="@style/TextView_Base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sw600_25dp"
                        android:text="@string/unit_m" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/sw600_25dp"
                android:background="@color/sino_white_11"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    style="@style/Main_Menu_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sw600_25dp"
                    android:text="@string/eyeshield_wait_time" />

                <ImageView
                    android:id="@+id/iv_edit3"
                    android:layout_width="@dimen/sw600_200dp"
                    android:layout_height="@dimen/sw600_200dp"
                    android:layout_marginTop="@dimen/sw600_25dp"
                    android:src="@mipmap/eyeshield_sum_time" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/iv_wait_time"
                        style="@style/TextView_Base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sw600_25dp"
                        android:text="0" />

                    <TextView
                        style="@style/TextView_Base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sw600_25dp"
                        android:text="@string/unit_m" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/btn_save"
                style="@style/App_Button_TextView"
                android:layout_width="@dimen/sw600_450dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/sw600_25dp"
                android:background="@drawable/btn_bk_orange"
                android:text="@string/btn_save" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
